--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="colleagues.html">Colleagues</a></li>
         <li><a href="petals.html">Petals</a></li>
         <li><a href="planes.html">Planes</a></li>
+        <li><a href="snow.html">Snow</a></li>
     </ul>
     
     
